--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cucumber-html-reporter": "^5.2.0",
     "geckodriver": "^1.19.1",
     "iedriver": "^3.14.2",
+    "install": "^0.13.0",
+    "npm": "^6.14.7",
     "safari": "0.0.1",
     "selenium-webdriver": "^4.0.0-alpha.7"
   }
